# cryptocopilot

./: .env.example  .gitignore  Makefile  PROJECT.md  README.md  STATE.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitkeep  Dockerfile  pom.xml
db/: init.sql
docs/: ANALYST_CARD.md  ARCHITECTURE.md  LINKEDIN_POST.md  MODEL_CARD.md  OLLAMA_SETUP.md  RAG_CARD.md  STAGE_2_BUILD_LOG.md
docs/guide/_build/: README.md  _smoke.py  build_deck.py  build_guides.py  build_transcript.py  content_en.py  content_fa.py  docxlib.py
docs/guide/presentation/: CryptoCopilot-DemoDay-Notebook-lm-Script.docx  CryptoCopilot-DemoDay-Script.docx  CryptoCopilot-DemoDay.pptx  CryptoCopilot-Old-One.pptx
docs/guide/transcript/: CryptoCopilot-5min-App-Demo-EN.md
docs/img/: README.md
docs/project/en/: CryptoCopilot-Guide-EN.docx
evals/: retrieval_eval.yaml
frontend/: .dockerignore  .gitignore  .gitkeep  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalystCard.tsx  ArchitecturePanel.tsx  CandleChart.tsx  DisclaimerBanner.tsx  EquityChart.tsx  Layout.tsx  LlmToggle.tsx  MlPipelineDiagram.tsx  SignalCard.tsx  SourceBadge.tsx  Toast.tsx  badges.tsx  bars.tsx  icons.tsx  ui.tsx
frontend/src/lib/: featureLabels.ts  format.ts  llmProvider.ts  useAsync.ts
frontend/src/pages/: AnalystDetailPage.tsx  AnalystPage.tsx  ChatPage.tsx  (+7 more)
ml/: Dockerfile  pyproject.toml
ml/ml/: __init__.py  api.py  config.py  db.py  explain.py  predict.py  scheduler.py  train.py
ml/ml/features/: __init__.py  build.py  calendar.py  ichimoku.py  indicators.py
ml/ml/ingest/: __init__.py  _coingecko.py  binance.py  coingecko_fundamentals.py  coingecko_market.py  onchain.py  rss_news.py  run_all.py
ml/ml/modelling/: __init__.py  artifacts.py  backtest.py  baseline.py  calibrate.py  encode.py  metrics.py  splits.py  tune.py  xgb_model.py
ml/reports/: backtest_v1_summary.md
ml/tests/: _synthetic.py  test_api.py  test_features.py  test_ichimoku.py  test_ingestion.py  test_no_leakage.py  test_predict_writes.py  test_splits.py
prompts/: 01_Stage_1_Infra_Ingestion.md  02_Stage_2_ML_Service.md  03_Stage_3_Backend_Foundation_TA.md  04_Stage_4_RAG_SpringAI.md  05_Stage_5_PaperTrading_Analyst.md  06_Stage_6_Frontend_React.md  07_Stage_7_Polish_DemoMode.md  08_Stage_8_README_LinkedIn.md
reports/: backtest_strategy_v1.md  retrieval_eval.md
scripts/: demo.sh  seed_demo_trades.sh
(+167 files in other folders)
