[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptocopilot-ml"
version = "0.2.0"
description = "CryptoCopilot ML/data service — ingestion (Stage 1) + ML direction classifier (Stage 2)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # numpy is pinned <2 so the shap/numba toolchain resolves to manylinux
    # wheels cleanly; nothing in this service needs numpy 2.x.
    "numpy>=1.26,<2.0",
    "pandas",
    "ccxt",
    "requests",
    "feedparser",
    "vaderSentiment",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "apscheduler",
    # --- HTTP API (on-demand ingest/train/predict triggers for backend + UI) ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # --- Stage 2: ML ---
    "ta>=0.11",
    "scikit-learn>=1.4",
    "xgboost>=2.0,<3",
    "optuna>=3.4",
    "shap>=0.44",
    "pyarrow>=14",
    "matplotlib>=3.7",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",  # FastAPI TestClient transport (ml.api tests)
]
# Optional experiment tracking — not installed in the image by default; the
# training code uses mlflow only if it is importable.
tracking = [
    "mlflow",
]

[tool.setuptools.packages.find]
include = ["ml*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "network: tests that require network access (deselect with -m 'not network')",
    "integration: tests that require a live Postgres + a trained model (deselect with -m 'not integration')",
]
